--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/all.css">
+  <title>Inktattoo</title>
+  <link rel="stylesheet" type="text/css" href="css/all.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:300,400,700" rel="stylesheet">
 </head>
 <body>
-  
+  <div class="wrapper-header">
+  	<div class="header">
+  		<img src="images/header-photo.jpg" width="1500" height="500">
+  		<div class="navigation">
+  			<ul>
+  				<li><a href="">home</a></li>
+  				<li><a href="">about</a></li>
+  				<li><a href="">gallery</a></li>
+  				<span class="logo"><a href="">logo</a></span>
+  				<li><a href="">faq</a></li>
+  				<li><a href="">find us</a></li>
+  				<li><a href="">contact</a></li>
+  			</ul>
+  		</div>
+  	</div>
+  </div>
 </body>
 </html>
