--- a/index.html
+++ b/index.html
@@ -23,5 +23,23 @@
   		</div>
   	</div>
   </div>
+  <div class="wrapper-footer">
+    <div class="footer">
+      <div class="navigation">
+        <ul>
+          <li><a href="">home</a></li>
+          <li><a href="">about</a></li>
+          <li><a href="">gallery</a></li>
+          <span class="logo"><a href="">logo</a></span>
+          <li><a href="">faq</a></li>
+          <li><a href="">find us</a></li>
+          <li><a href="">contact</a></li>
+        </ul>
+      </div>
+      <div class="copyright">
+        <p>2014  InkTattoo. All rights reserved - Designed by theuncreativelab.com</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
