--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
   		</div>
   	</div>
   </div>
+  <div class="wrapper-block">
+  	<div class="block">
+  		<div class="promo">
+  			<div class="promo__title">
+  				<div class="promo__title__picture"></div>
+  				<div class="promo__title__discription"></div>
+  			</div>
+  			<div class="promo__discription"></div>
+  		</div>
+  	</div>
+  </div>
 </body>
 </html>
