--- a/index.html
+++ b/index.html
@@ -27,24 +27,31 @@
   	<div class="block">
   		<div class="promo">
   			<div class="promo__title">
-  				<div class="promo__title__picture"></div>
-  				<div class="promo__title__discription"></div>
+  				<div class="promo__title__picture">
+            <img src="images/img-studio-bg.jpg" alt="">    
+          </div>
+  				<div class="promo__title__discription">
+            <h1>ABOUT US</h1>    
+          </div>
   			</div>
   			<div class="promo__discription"></div>
   		</div>
   	</div>
+  </div>
   <div class="wrapper-footer">
     <div class="footer">
-      <div class="navigation">
-        <ul>
-          <li><a href="">home</a></li>
-          <li><a href="">about</a></li>
-          <li><a href="">gallery</a></li>
-          <span class="logo"><a href="">logo</a></span>
-          <li><a href="">faq</a></li>
-          <li><a href="">find us</a></li>
-          <li><a href="">contact</a></li>
-        </ul>
+      <div class="footer-header">
+        <div class="navigation">
+          <ul>
+            <li><a href="">home</a></li>
+            <li><a href="">about</a></li>
+            <li><a href="">gallery</a></li>
+            <span class="logo"><a href="">logo</a></span>
+            <li><a href="">faq</a></li>
+            <li><a href="">find us</a></li>
+            <li><a href="">contact</a></li>
+          </ul>
+        </div>
       </div>
       <div class="copyright">
         <p>2014 InkTattoo. All rights reserved - Designed by theun creativelab.com</p>
