--- a/index.html
+++ b/index.html
@@ -33,19 +33,22 @@
   			<div class="promo__discription"></div>
   		</div>
   	</div>
+  </div>
   <div class="wrapper-footer">
     <div class="footer">
-      <div class="navigation">
-        <ul>
-          <li><a href="">home</a></li>
-          <li><a href="">about</a></li>
-          <li><a href="">gallery</a></li>
-          <span class="logo"><a href="">logo</a></span>
-          <li><a href="">faq</a></li>
-          <li><a href="">find us</a></li>
-          <li><a href="">contact</a></li>
-        </ul>
-      </div>
+    	<div class="block-footer">
+	      	<div class="navigation">
+		        <ul>
+		          <li><a href="">home</a></li>
+		          <li><a href="">about</a></li>
+		          <li><a href="">gallery</a></li>
+		          <span class="logo"><a href="">logo</a></span>
+		          <li><a href="">faq</a></li>
+		          <li><a href="">find us</a></li>
+		          <li><a href="">contact</a></li>
+		        </ul>
+	      	</div>
+	    </div>
       <div class="copyright">
         <p>2014 InkTattoo. All rights reserved - Designed by theun creativelab.com</p>
       </div>
