--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <h1>ABOUT US</h1>    
           </div>
   			</div>
-  			<div class="promo__discription"></div>
+  			<div class="promo__discription">
+             
+        </div>
   		</div>
   	</div>
   </div>
