--- a/index.html
+++ b/index.html
@@ -40,6 +40,34 @@
   		</div>
   	</div>
   </div>
+  <div class="wrapper-command">
+    <div class="command">
+      <div class="promo__title">
+        <div class="promo__title__picture">
+          <img src="images/bg-team.jpg" alt="">    
+        </div>
+        <div class="promo__title__discription">
+          <h1>TEAM</h1>    
+        </div>
+      </div>
+      <div class="promo__title">
+        <img src="images/team-member-1.jpg" alt="">
+      </div>
+      <div class="promo__title">
+        <div class="promo__title__article">
+          <div class="article__title">
+            <h2>Corey Miller</h2>
+          </div>
+          <div class="article__discription">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc risus eros, ultricies quis erat sit amet, elementum vulputate lorem. Sed at lacinia lectus, quis blandit libero. Quisque ac malesuada lectus. Proin gravida feugiat commodo. Phasellus fermentum sem ut felis vehicula aliquet. Donec rhoncus, mi et euismod dictum, purus lorem vehicula justo, a iaculis mi nulla et risus.</p>
+          </div>
+          <div class="article__icons">
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="wrapper-footer">
     <div class="footer">
     	<div class="block-footer">
