--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   	</div>
   </div>
   <div class="wrapper-command">
-    <div class="command">
+    <div class="command bg-dark">
       <div class="promo__title">
         <div class="promo__title__picture">
           <img src="images/bg-team.jpg" alt="">    
@@ -101,16 +101,23 @@
       <div class="promo__title">
         <img src="images/team-member-1.jpg" alt="">
       </div>
-      <div class="promo__title">
+      <div class="promo__title padding-different">
         <div class="promo__title__article">
           <div class="article__title">
             <h2>Corey Miller</h2>
           </div>
           <div class="article__discription">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc risus eros, ultricies quis erat sit amet, elementum vulputate lorem. Sed at lacinia lectus, quis blandit libero. Quisque ac malesuada lectus. Proin gravida feugiat commodo. Phasellus fermentum sem ut felis vehicula aliquet. Donec rhoncus, mi et euismod dictum, purus lorem vehicula justo, a iaculis mi nulla et risus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc risus eros, ultricies quis erat sit amet, elementum vulputate lorem. Sed at lacinia lectus, quis blandit libero. <br>Quisque ac malesuada lectus. Proin gravida feugiat commodo. Phasellus fermentum sem ut felis vehicula aliquet. Donec rhoncus, mi et euismod dictum, purus lorem vehicula justo, a iaculis mi nulla et risus.</p>
           </div>
           <div class="article__icons">
-            
+            <ul>
+              <li class="icon-facebook"><a href="" class="facebook">facebook</a></li>
+              <li class="icon-twitter"><a href=""><img src="images/icons/twitter2.svg" alt="#"></a></li>
+              <li class="icon-tumblr"><a href=""><img src="images/icons/tumblr.svg" alt="#"></a></li>
+              <li class="icon-linkedin"><a href=""><img src="images/icons/linkedin2.svg" alt="#"></a></li>
+              <li class="icon-instagram"><a href=""><img src="images/icons/instagram2.svg" alt="#"></a></li>
+              <li class="icon-google"><a href=""><img src="images/icons/google.svg" alt="#"></a></li>
+            </ul>
           </div>
         </div>
       </div>
