--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   		</div>
   	</div>
   </div>
+  <!-- BLOCK -->
   <div class="wrapper-block">
   	<div class="block">
   		<div class="promo">
@@ -88,14 +89,30 @@
 		</div>
   	</div>
   </div>
+  <!-- QUOTE -->
+  <div class="wrapper-quote" >
+	<div class="quote">
+		<div class="quote__title">
+			<span class="left left">&#8220</span>
+			<div class="quote__title__discription">
+				<p>Aliquam ac justo interdum, elementum ligula et, condimentum orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<span class="right right">&#8221</span>
+		</div>
+		<div class="quote__discription">
+			<p>- john doe -</p>
+		</div>
+	</div>
+  </div>
+  <!-- COMMAND -->
   <div class="wrapper-command">
     <div class="command">
       <div class="promo__title">
         <div class="promo__title__picture">
-          <img src="images/bg-team.jpg" alt="">    
+          <img src="images/bg-team.jpg" alt="">
         </div>
-        <div class="promo__title__discription">
-          <h1>TEAM</h1>    
+        <div class="promo__title__discription uppercase">
+          <h1>team</h1>
         </div>
       </div>
       <div class="promo__title">
@@ -110,12 +127,105 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc risus eros, ultricies quis erat sit amet, elementum vulputate lorem. Sed at lacinia lectus, quis blandit libero. Quisque ac malesuada lectus. Proin gravida feugiat commodo. Phasellus fermentum sem ut felis vehicula aliquet. Donec rhoncus, mi et euismod dictum, purus lorem vehicula justo, a iaculis mi nulla et risus.</p>
           </div>
           <div class="article__icons">
-            
           </div>
         </div>
       </div>
     </div>
   </div>
+  <!-- QUOTE -->
+  <div class="wrapper-twitter" >
+	<div class="quote">
+		<div class="quote__title">
+			<img src="images/">
+			<div class="quote__title__discription">
+				<p>RT @collis: Trade growth ideas with other founders. Look for ways to cross promote. Small startups today may be big friends later. (9/10) 2 days ago.</p>
+			</div>
+		</div>
+	</div>
+  </div>
+  <!-- GALLERY -->
+  <div class="wrapper-gallery">
+  	<div class="gallery">
+  		<div class="promo__title">
+	  		<div class="promo__title__discription uppercase">
+	           <h1>gallery</h1>
+	        </div>
+	    </div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-1.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-2.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-3.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-4.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-5.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-6.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-7.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-8.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-9.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-10.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-11.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-12.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-13.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-14.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-15.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-16.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-17.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  		<div class="gallery__picture">
+  			<img src="images/img-gallery-18.jpg">
+  			<div class="gallery__picture__about"></div>
+  		</div>
+  	</div>
+  </div>
+  <!-- FOOTER -->
   <div class="wrapper-footer">
     <div class="footer">
     	<div class="block-footer">
