--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
           <div class="article__icons">
             <ul>
               <li class="icon-facebook"><a href="" class="facebook">facebook</a></li>
-              <li class="icon-twitter"><a href=""><img src="images/icons/twitter2.svg" alt="#"></a></li>
-              <li class="icon-tumblr"><a href=""><img src="images/icons/tumblr.svg" alt="#"></a></li>
-              <li class="icon-linkedin"><a href=""><img src="images/icons/linkedin2.svg" alt="#"></a></li>
-              <li class="icon-instagram"><a href=""><img src="images/icons/instagram2.svg" alt="#"></a></li>
-              <li class="icon-google"><a href=""><img src="images/icons/google.svg" alt="#"></a></li>
+              <li class="icon-twitter"><a href="" class="twitter">twitter</a></li>
+              <li class="icon-tumblr"><a href="" class="tumblr">tumblr</a></li>
+              <li class="icon-linkedin"><a href="" class="linkedin">linkedin</a></li>
+              <li class="icon-instagram"><a href="" class="instagram">instagram</a></li>
+              <li class="icon-google"><a href="" class="google">google</a></li>
             </ul>
           </div>
         </div>
